# job-agent

./: Cargo.toml  Database.md
src/: main.rs
src/bot/: mod.rs  my_bot.rs
src/controllers/: mod.rs
src/controllers/embedding/: mod.rs  text_to_vec.rs
src/controllers/handlers/: api_calls.rs  job_matching.rs  mod.rs  open_ai.rs  users.rs
src/helpers/: job_to_text.rs  mod.rs  similarities.rs
