[package]
name = "job-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web= "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51.0", features = ["full"] }

reqwest = { version = "0.13.2", features = ["json"] }

dotenvy = "0.15"
log = "0.4"
env_logger = "0.11.10"
scraper = "0.26.0"
chrono = "0.4.44"
sqlx = {    version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "macros"] }
teloxide = {    version = "0.17.0", features = ["full"] }
anyhow = "1.0"
